# eu-ai-act-scanner

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
eu_ai_act_scanner/: __init__.py  __main__.py  cli.py  gdpr.py  guidance.py  patterns.py  scanner.py
eu_ai_act_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
npm/: README.md  package.json
